Fixing css on mobile

--- a/Venus-Homepage.css
+++ b/Venus-Homepage.css
@@ -26,10 +26,12 @@ body    {
 #bgColor {
     background-color: rgb(255, 239, 251);
     min-height: 100vh;
+    width: 100%;
 }
 
 header  {
     background-color: rgb(255, 247, 252);
+    width: 100%;
     padding: 10px;
     line-height: 30px;
     padding-left: 5%;
@@ -60,6 +62,7 @@ h5  {
 
 #content    {
     background-color: #f5d2ed;
+    width: 100%;
     display: flex;
     flex-flow: column;
     height: 50%;
